# prism-prm

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml
backend/: entrypoint.sh  pyproject.toml
backend/app/: __init__.py  config.py  constants.py  db.py  db_wait.py  main.py  visibility.py
backend/app/api/: __init__.py  auth.py  contacts.py  enrichment.py  events.py  journal.py  sharing.py  summary.py
backend/app/auth/: __init__.py  cookies.py  crypto.py  deps.py  oidc.py  security.py
backend/app/integrations/: __init__.py  ical.py  nextcloud.py  vcard.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 0df3e85b58e9_apitoken_last_used_tz.py  3fa43011d101_initial.py  54ea5b0c9513_enrichment_and_geocode.py  6e68afab217f_event_types.py  9a86bb2f66a1_prefs_nextcloud_links_notes.py  a1b2c3d4e5f6_contact_gender.py  a7b8c9d0e1f2_user_date_format.py  b2c3d4e5f6a7_contact_middle_name.py  c3d4e5f6a7b8_tags.py  (+5 more)
backend/app/models/: __init__.py  contact.py  enrichment.py  event.py  journal.py  tag.py  user.py
backend/app/schemas/: auth.py  contact.py  enrichment.py  event.py  journal.py  sharing.py  summary.py
backend/app/services/: __init__.py  calendar_sync.py  geocode.py  journal.py  nextcloud_accounts.py  phones.py  scheduler.py  sync.py  tags.py  weather.py
backend/tests/: conftest.py  test_auth.py  test_contacts.py  test_enrichment.py  test_event_schema.py  test_geocode.py  test_hardening.py  test_ical.py  test_journal.py  test_phones.py  test_sharing.py  test_vcard.py  test_weather.py
(+30 files in other folders)
