[project]
name = "prism"
version = "0.1.0"
description = "Prism — a self-hosted personal relationship manager backed by Nextcloud"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "passlib[argon2]>=1.7.4",
    "pyjwt>=2.10",
    "authlib>=1.3.2",
    "cryptography>=43.0",
    "httpx>=0.27",
    "python-multipart>=0.0.12",
    "email-validator>=2.2",
    "itsdangerous>=2.2",
    # DAV + calendar/contact serialization
    "caldav>=1.3",
    "vobject>=0.9.7",
    "icalendar>=6.0",
    # Background sync + reminder dispatch
    "apscheduler>=3.10",
    "tzlocal>=5.2",  # APScheduler's local-timezone detection needs this explicitly
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "aiosqlite>=0.20",
    "ruff>=0.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["app/migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]
